// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context menu tests rightclick scalar addrs :: 1`] = `
Array [
  "id",
  "scalar",
  "2",
  "::",
]
`;

exports[`context menu tests rightclick scalar addrs 1.1.1.1 1`] = `
Array [
  "id",
  "scalar",
  "1",
  "1.1.1.1",
]
`;

exports[`context menu tests rightclick scalar addrs fe80::58d2:2d09:e8cb:a8ad 1`] = `
Array [
  "id",
  "scalar",
  "3",
  "fe80::58d2:2d09:e8cb:a8ad",
]
`;

exports[`context menu tests rightclick scalar unset unset 1`] = `
Array [
  "id",
  "scalar",
  "61",
  "⦻",
  "60",
  "⦻",
  "59",
  "⦻",
  "58",
  "⦻",
  "53",
  "⦻",
  "52",
  "⦻",
  "51",
  "⦻",
  "50",
  "⦻",
  "49",
  "⦻",
  "48",
  "⦻",
]
`;
